--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,7 @@ body {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  scrollbar-width: none;
+  /* scrollbar-width: none; */
 }
 
 #invisible {
@@ -3923,6 +3923,8 @@ section.courses {
 }
 .feedback article {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 .feedback__avatar {
@@ -3937,25 +3939,39 @@ section.courses {
 }
 @media (min-width: 451px) {
   .feedback article {
-    flex-flow: row nowrap;
-    align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .feedback article p {
     margin: 0 0 0 30px;
-    flex: 1;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
   }
 }
 @media screen and (max-width: 450px) {
   .feedback article {
-    flex-flow: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .feedback__avatar {
     width: 200px;
     height: 200px;
   }
   .feedback article p {
-    flex: 1;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
     margin: 30px 0 0 0;
   }
 }
@@ -5412,7 +5428,9 @@ section.courses {
 }
 
 .course-page .course__block {
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .course-page .education__subject {
@@ -5493,8 +5511,13 @@ section.courses {
 }
 @media screen and (max-width: 500px) {
   .course__features dl {
-    flex-flow: column;
-    align-items: stretch;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
   }
 }
 .course__features dd {
@@ -5639,7 +5662,9 @@ section.courses {
   color: #595f6f;
   padding: 10px;
   display: block;
-  flex: auto;
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
   text-align: center;
 }
 
@@ -5709,7 +5734,8 @@ section.courses {
 
 @media (max-width:850px) {
   .course__support {
-    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
   }
 }
 
@@ -6788,7 +6814,10 @@ section.courses {
 }
 
 .newslist-page .brends {
-  padding-top: 30px;
+  /* padding-top: 30px; */
+}
+.newslist-page .brends__list {
+  margin: 0!important
 }
 
 .newslist-page .brends__list {
@@ -7040,20 +7069,194 @@ section.courses {
 }
 
 footer.footer {
-  font-size: 14px;
-  line-height: 1.29;
-  color: #ffffff;
-  background: rgba(0, 72, 156, 0.3);
-  min-height: 30px;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 150px 0;
+  font-size: 20px;
+  line-height: 1.6;
+  color: #709be7;
+  background: linear-gradient(30deg, #0f358e, #709be7);
+}
+
+.flex-container {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  width: 100%;
+  max-width: 1440px;
+  padding: 0 150px;
+}
+.flex-row {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  z-index: 1;
+}
+.flex-col {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0 15px;
+}
+.flex-col.flex--double {
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+}
+.footer__menu {
+  font-size: inherit;
+  line-height: inherit;
+}
+
+.footer__menu strong {
+  position: relative;
+  display: block;
+  margin-bottom: 15px;
+  color: rgba(255,255,255,.3);
+  font-size: 18px;
+  line-height: 1;
+  text-transform: uppercase;
+  font-weight: 300;
+}
+
+.footer__menu.menu--brands ul {
+  -webkit-columns: 2;
+          columns: 2;
+  -webkit-column-count: 2;
+          column-count: 2;
+}
+
+.footer__menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+}
+.menu--main, .menu--brands {
+  -ms-flex-line-pack: justify;
+      align-content: space-between;
+  -webkit-box-align: space-between;
+      -ms-flex-align: space-between;
+          align-items: space-between;
+}
+.menu--social {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+
+.footer__menu ul li a {
+  color: #fff;
+  font-variant: all-small-caps;
+  font-weight: 600;
+  line-height: 1.4;
+  white-space: nowrap;
+}
+
+.footer .header__social-list {
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+.footer .header__social {
+  position: relative;
+  margin-right: 10px;
+}
+.footer .menu--social strong {
+  text-align: center;
+}
+.footer .icg-copy {
+  opacity: 0.08;
+  font-size: 15vw;
+  font-weight: 800;
+  line-height: 1;
+  letter-spacing: -1.88px;
+  text-align: left;
+  color: #ffffff;
+  white-space: nowrap;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  cursor: default;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  z-index: 0;
+}
+@media screen and (max-width: 800px) {
+  footer.footer {
+    padding: 60px 0;
+  }
+  .flex-container {
+    padding: 0 30px;
+  }
+}
+@media screen and (max-width:768px) {
+  footer.footer {
+    padding: 30px 0;
+  }
+  .flex-row {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .flex-col:not(:last-child) {
+    padding: 0 0 30px 0;
+  }
+  footer .flex-col:nth-child(1),
+  footer .flex-col:nth-child(2) {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 50%;
+            flex: 0 1 50%;
+  }
+  .footer .flex-col:nth-child(3) {
+    -webkit-box-flex: 1;
+        -ms-flex: auto;
+            flex: auto
+  }
+  .footer__menu.menu--brands ul {
+    -webkit-columns: 1;
+            columns: 1;
+    -webkit-column-count: 1;
+            column-count: 1;
+  }
 }
 
 /* animations */
